Patch 6.2.503 Problem:    Mac: Can't compile MacRoman conversions without the GUI. Solution:   Also link with the Carbon framework for the terminal version, for 	    the MacRoman conversion functions. (Eckehard Berns) 	    Remove -ltermcap from the GUI link command, it is not needed. Files:	    src/auto/configure, src/Makefile, src/configure.in

--- a/src/Makefile
+++ b/src/Makefile
@@ -1142,12 +1142,12 @@ PHOTONGUI_TESTTARGET = gui
 CARBONGUI_SRC	= gui.c gui_mac.c
 CARBONGUI_OBJ	= objects/gui.o objects/gui_mac.o objects/pty.o
 CARBONGUI_DEFS	= -DFEAT_GUI_MAC -arch ppc -fno-common -fpascal-strings \
-                  -Wall -Wno-unknown-pragmas \
-                  -mdynamic-no-pic -pipe
+		  -Wall -Wno-unknown-pragmas \
+		  -mdynamic-no-pic -pipe
 CARBONGUI_IPATH	= -I. -Iproto
 CARBONGUI_LIBS_DIR =
 CARBONGUI_LIBS1	= -framework Carbon
-CARBONGUI_LIBS2	= -ltermcap
+CARBONGUI_LIBS2	=
 CARBONGUI_INSTALL = install_macosx
 CARBONGUI_TARGETS =
 CARBONGUI_MAN_TARGETS =
