--- a/src/testdir/test3.in
+++ b/src/testdir/test3.in
@@ -297,6 +297,25 @@ char *(array[100]) = {
 	"bar",
 }
 
+enum soppie
+{
+	yes = 0,
+	no,
+	maybe
+};
+
+typedef enum soppie
+{
+	yes = 0,
+	no,
+	maybe
+};
+
+{
+	int a,
+		b;
+}
+
 {
 	struct Type
 	{
